@@ -1,6 +1,16 @@
 Revision history for Perl extension At.pm
 
-{{$NEXT}}
+[Unreleased]
+
+## Added
+
+    - Dedicated Firehose client (At::Protocol::Firehose) for real-time event streaming.
+    - Support for IO::Async event loop via At::UserAgent::IOAsync.
+    - OAuth
+
+## Changed
+
+    - Refactored ::UserAgent architecture to support prioritized auto-detection of event loops (Mojo -> IO::Async -> HTTP::Tiny).
 
 0.18 2024-02-19T21:49:55Z
 
